# PACS_Tuning

./: .gitignore  Changelog.md  README.md
.github/workflows/: plot.yml
code/: .ACSenv  CMakeLists.txt
code/include/: ACSException.hpp  FMIP.hpp  FixPolicy.hpp  MIP.hpp  MIP_solver.hpp  MPIContext.hpp  MPIController.hpp  MTContext.hpp  MergePolicy.hpp  OMIP.hpp  RlxFMIP.hpp  RlxMIP.hpp  Utils.hpp  fixing_policy.hpp  utils.hpp
code/source/: ACS.cpp  CPLEXRun.cpp  FMIP.cpp  FixPolicy.cpp  MIP.cpp  MIP_solver.cpp  MPIContext.cpp  MPIController.cpp  MTContext.cpp  MergePolicy.cpp  OMIP.cpp  RlxFMIP.cpp  RlxMIP.cpp  Utils.cpp  fixing_policy.cpp  main.cpp  utils.cpp
code/test/scripts/: MIPgapPlot.py  checkDataInt.py  clear_output.py  collect_data.py  create_jobs.py  create_perfplot.py  dataCollect.py  dataMerge.py  fHard_instances.csv  jobGen.py  jobStart.py  launch_jobs.py  pp.py  succRatePlot.py
code/test/scripts/data/: fHard_instances.csv
code/test/scripts/data/02_04_2025/: 02_04_2025_v1_0_5-raw.csv
code/test/scripts/data/04_02_2025/: 02_04_2025_v1_0_5.csv
code/test/scripts/data/04_08_2025/: 08_04_2025_v1_1_3-raw.csv
code/test/scripts/data/04_14_2025/: 14_04_2025_v1_1_0_InitSol.csv
code/test/scripts/data/04_16_2025/: 16_04_2025_InitSol2.csv
code/test/scripts/data/04_23_2025/: 23_04_2025_InitSol3-raw.csv
code/test/scripts/data/04_28_2025/: 28_04_2025_v1_1_0_InitSol4-raw.csv  28_04_2025_v1_1_0_InitSol4.csv
code/test/scripts/data/05_06_2025/: 06_05_2025_InitSol5.csv  06_05_2025_v1_1_0_InitSol5-raw.csv
code/test/scripts/data/05_08_2025/: 05_08_2025_InitSol6-raw.csv  05_08_2025_InitSol6.csv
code/test/scripts/data/05_10_2025/: 05_10_2025-raw.json  05_10_2025.json
code/test/scripts/data/05_18_2025/: 05_18_2025-raw.json  05_18_2025.json
code/test/scripts/data/05_19_2025/: 05_19_2025-raw.json  05_19_2025.json
code/test/scripts/data/05_20_2025/: 05_20_2025-raw.json  05_20_2025.json
code/test/scripts/data/05_21_2025/: 05_21_2025.json
code/test/scripts/data/05_22_2025/: 05_22_2025-raw.json  05_22_2025.json
code/test/scripts/data/05_23_2025/: 05_23_2025-raw.json  05_23_2025.json
code/test/scripts/data/05_24_2025/: 05_24_2025-raw.json  05_24_2025.json
code/test/scripts/data/06_12_2025/: 06_12_2025-raw.json  06_12_2025.json
code/test/scripts/data/06_13_2025/: 06_13_2025-raw.json  06_13_2025.json
code/test/scripts/data/06_17_2025/: 06_17_2025-MIPGapPlot.txt  06_17_2025-SuccRatePlot.txt  06_17_2025-raw.json  06_17_2025.json
code/test/scripts/data/06_18_2025/: 06_18_2025-MIPGapPlot.txt  06_18_2025-SuccRatePlot.txt  06_18_2025-raw.json  06_18_2025.json
code/test/scripts/data/06_19_2025/: 06_19_2025-MIPGapPlot.txt  06_19_2025-SuccRatePlot.txt  06_19_2025.json  merger.py
code/test/scripts/data/06_20_2025/: 06_20_2025-MIPGapPlot.txt  06_20_2025-SuccRatePlot.txt  06_20_2025-raw.json  06_20_2025.json
code/test/scripts/data/06_21_2025/: 06_21_2025-raw.json
code/test/scripts/data/06_23_2025/: 06_23_2025-MIPGapPlot.txt  06_23_2025-raw.json
code/test/scripts/data/06_24_2025/: 06_24_2025-raw.json
code/test/scripts/data/06_25_2025/: 06_25_2025-MIPGapPlot.txt  06_25_2025-SuccRatePlot.txt  06_25_2025-raw.json  06_25_2025.json
code/test/scripts/data/06_26_2025/: 06_26_2025-MIPGapPlot.txt  06_26_2025-SuccRatePlot.txt  06_26_2025-raw.json
code/test/scripts/data/07_04_2025/: 07_04_2025-raw.json
code/test/scripts/data/07_10_2025/: 07_10_2025-MIPGapPlot.txt  07_10_2025-SuccRatePlot.txt  07_10_2025-raw.json  07_10_2025.json
code/test/scripts/data/07_15_2025/: 07_15_2025-MIPGapPlot.txt  07_15_2025-SuccRatePlot.txt  07_15_2025-raw.json  07_15_2025.json
code/test/scripts/data/08_04_2025/: 08_04_2025_v1_1_3.csv
code/test/scripts/data/0_ACS_STD_Res_v1.2.6/: ACS_STD-MIPGapInt.txt  ACS_STD-MIPGapPlot.txt  ACS_STD-SuccRateInt.txt
code/test/scripts/data/14_04_2025/: 14_04_2025_v1_1_0_InitSol-raw.csv
code/test/scripts/data/16_04_2025/: 16_04_2025_v1_1_0_InitSol2-raw.csv
code/test/scripts/data/1_ACS_DYN_Res_v1.2.6/: ACS_DYN-SuccRateInt.txt  ACS_DYN.json  PACS_DYN-MIPGapPlot.pgf  PACS_DYN-MIPGapPlot.txt  PACS_DYN-MIPGapPlot_integrals.pgf  PACS_DYN-MIPSuccRatePlot.pgf  PACS_DYN-MIPSuccRatePlot_integrals.pgf
code/test/scripts/data/23_04_2025/: 23_04_2025_v1_1_0_InitSol3.csv
code/test/scripts/data/2_ACS_STD_DYN_Res_v1.2.6/: ACS_STD_DYN-SuccRateInt.txt
code/test/scripts/data/3_ACS_InitSol_Res_v1.2.6/: ACS_InitSol-raw.json
code/test/scripts/data/4_ACS_FixSlackUB_v1.2.6/: ACS_FixSlackUB-SuccRateInt.txt  ACS_FixSlackUB.json
code/test/scripts/data/5_ACS_BudgetCnstr_Res_v1.2.6/: ACS_BudgetCnstr-MIPGapInt.txt  ACS_BudgetCnstr.json
code/test/scripts/data/6_ACS_WalkMIP_Res_v1.2.9/: ACS_WalkMIP-MIPGapInt.txt  ACS_WalkMIP-SuccRateInt.txt  ACS_WalkMIP.json
code/test/scripts/data/ACS_DYN_Res_v1.2.6/: ACS_DYN-MIPGapInt.txt  ACS_DYN-raw.json
code/test/scripts/data/ACS_InitSol_Res_v1.2.6/: ACS_InitSol-MIPGapInt.txt  ACS_InitSol-SuccRateInt.txt  ACS_InitSol.json
code/test/scripts/data/ACS_STD_DYN_Res_v1.2.6/: ACS_STD_DYN-MIPGapInt.txt  ACS_STD_DYN.json
code/test/scripts/data/ACS_STD_Res_v1.2.6/: ACS_STD.json
code/test/scripts/tmp/: 2club200v15p5scn_ACS_0_56473829.json  2club200v15p5scn_ACS_2_27384910.json  2club200v15p5scn_CPLEX.json  ofi2_ACS_2_83746592.json
thesis/: BiscacciaCarrara_Francesco.tex  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.tex  refs.bib
thesis/chapter/: ACSFramework.tex  Conclusion.tex  Introduction.tex  REPPUBLIK.tex  Results.tex  SHUFFLIK.tex  Tuning.tex  biblio.tex  conclusion.tex  data_analysis.tex  def.tex  thanks.tex
thesis/chapter/img/10/: math_ast_10-iter.txt  math_tech_10-iter.txt  polblogs_10-iter.txt  tech_mil_10-iter.txt
thesis/chapter/img/15/: math_ast_15-iter.txt  math_tech_15-iter.txt  polblogs_15-iter.txt  tech_mil_15-iter.txt
thesis/chapter/img/5/: math_ast_5-iter.txt  math_tech_5-iter.txt  polblogs_5-iter.txt  tech_mil_5-iter.txt
thesis/chapter/img/PACS_BDG_CONSTR/: ACS_BudgetCnstr-MIPGapPlot.pgf  ACS_BudgetCnstr-MIPGapPlot_integrals.pgf  ACS_BudgetCnstr-SuccRatePlot.pgf  (+1 more)
(+24 files in other folders)
